up to section 1

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Portfolio</title>
+    <title>Baby's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">Baby </span>World</h1>
+            <h3>Baby Society</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur magni quo, suscipit excepturi aspernatur, quas autem totam dolor, consequatur laborum aut tempora dignissimos! Natus maiores, dicta officiis dolores vel illum voluptas id iure, doloremque nam reiciendis, eveniet quos quidem assumenda minus? Quasi, tenetur soluta deserunt aspernatur mollitia qui ipsum recusandae.</p>
+            <a class="link-button" href="http://facebook.com" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/baby-bg3.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
