--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <section class="top-banner">
-      <div class="half-width">
+      <div class="half-width half-width-div1">
         <h1>Welcome to</h1>
         <h1><span class="orange-color">Baby </span>World</h1>
         <h3>Baby Society</h3>
@@ -33,6 +33,22 @@
       </div>
       <div class="half-width">
         <img src="images/baby-bg3.png" alt="" />
+      </div>
+    </section>
+    <section class="dream-banner">
+      <div class="half-width">
+        <img src="images/Baby-bg1.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a baby sitter</h2>
+        <p class="half-width-div2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+          corrupti consectetur architecto, laboriosam error velit deserunt quam
+          soluta. Voluptate explicabo qui ut quo illum doloribus porro quod
+          culpa molestias itaque inventore magnam nihil illo commodi officia .
+        </p>
+        <a class="link-button" href="">DOWNLOAD RESUME</a>
       </div>
     </section>
   </body>
