footer and exp added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner">
+    <section class="top-banner flexible">
       <div class="half-width half-width-div1">
         <h1>Welcome to</h1>
         <h1><span class="orange-color">Baby </span>World</h1>
@@ -35,7 +35,7 @@
         <img src="images/baby-bg3.png" alt="" />
       </div>
     </section>
-    <section class="dream-banner">
+    <section class="dream-banner flexible">
       <div class="half-width">
         <img src="images/Baby-bg1.png" alt="" />
       </div>
@@ -51,5 +51,31 @@
         <a class="link-button" href="">DOWNLOAD RESUME</a>
       </div>
     </section>
+    <section class="exp-area">
+      <h1>Experiences</h1>
+      <div class="flexible">
+        <div id="exp-pro" class="exp-widget">
+          <h2>Baby Expert Pro</h2>
+          <h3 class="orange-color">2022-2023 | pro</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            perferendis modi corrupti laborum provident vero consequuntur,
+            reprehenderit voluptatum totam amet?
+          </p>
+        </div>
+        <div id="exp-baby" class="exp-widget">
+          <h2>Baby Expert Amateur</h2>
+          <h3 class="orange-color">2021-2022 | Amateur</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            perferendis modi corrupti laborum provident vero consequuntur,
+            reprehenderit voluptatum totam amet?
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>© Baby World 2021, a Programming Hero initiative.</p>
+    </footer>
   </body>
 </html>
